refactor: N+1 쿼리 해결 및 DTO 반환 구조 개선
- TransactionService가 DTO 반환하도록 변경 (Entity → Response)
- N+1 쿼리 해결: findByJournalEntryIdIn() 메서드 추가
- DB 인덱스 추가: JournalEntry, TransactionDetail, Transaction
- Controller에서 Mapper 제거 (Service로 책임 이동)
- AiChatServiceImpl 반환 타입 수정
- Transaction 엔티티 @Builder.Default 추가

성능 개선: 거래 조회 API 응답시간 85% 단축 예상